test/cli/test-mutate/same-name-mutate-existing/mutated-resources.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: bar
  name: secret-1
  namespace: staging
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: bar
  name: secret-1
  namespace: prod
