test/cli/test-mutate/same-name-mutate-existing/secret-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-1
  namespace: staging
