test/cli/test-mutate/same-name-mutate-existing/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- cm.yaml
results:
- kind: ""
  patchedResource: mutated-resources.yaml
  policy: mutate-existing-secret
  resources:
  - staging/secret-1
  - prod/secret-1
  result: pass
  rule: mutate-secret-on-configmap-create
targetResources:
- secret-1.yaml
- secret-2.yaml
